[build-system]
requires = ["setuptools>=60"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
split_on_trailing_comma = true
combine_as_imports = true
known_first_party = [
    "toga",
    "toga_android",
    "toga_cocoa",
    "toga_dummy",
    "toga_gtk",
    "toga_iOS",
    "toga_web",
    "toga_winforms",
]

[tool.towncrier]
directory = "changes"
package = "toga"
package_dir = "src"
filename = "docs/background/releases.rst"
title_format = "{version} ({project_date})"
template = "changes/template.rst"
