[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    local/*,\
    docs/*,\
    */node_modules/*,\
    */.eggs/*,\
    src/*/build,\
    src/gtk/toga_gtk/libs/gtk.py
    src/gtk/toga_gtk/libs/__init__.py
    src/winforms/toga_winforms/libs/__init__.py
    examples/.template,\
    examples/*/android,\
    examples/*/linux,\
    examples/*/macOS,\
    examples/*/iOS,\
    examples/*/win32
max-complexity = 10
max-line-length = 119
ignore = E121,E123,E126,E226,E24,E704,W503,W504,C901

[metadata]
description-file = README.md
