[metadata]
name = toga
description = A Python native, OS native GUI toolkit.
url = https://beeware.org/project/projects/libraries/toga/
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://toga.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/toga/issues
    Source = https://github.com/beeware/toga
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = BeeWare Team
maintainer_email = team@beeware.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
license = New BSD
license_file = LICENSE
long-description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    gui
    widget
    cross-platform
    desktop
    mobile
    web
    macOS
    cocoa
    iOS
    android
    windows
    winforms
    linux
    gtk
    django

[options]
zip_safe = False
python_requires = >= 3.5

[flake8]
# https://flake8.readthedocs.org/en/latest/
exclude=\
    */.eggs/*,\
    */build/*,\
    */node_modules/*,\
    .tox/*,\
    attic/*,\
    docs/*,\
    local/*,\
    nursery/*,\
    examples/.template,\
    examples/*/android,\
    examples/*/linux,\
    examples/*/macOS,\
    examples/*/iOS,\
    examples/*/windows,\
    venv*
max-complexity = 25
max-line-length = 119

[isort]
skip =
    .tox,\
    attic,\
    docs/conf.py,\
    examples/.template,\
    local,\
    nursery,\
    src/gtk/toga_gtk/libs/gtk.py,\
    src/winforms/toga_winforms/libs/winforms.py,\
    venv
multi_line_output = 3
include_trailing_comma = true
