[metadata]
name = toga
description = A Python native, OS native GUI toolkit.
url = https://beeware.org/project/projects/libraries/toga/
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://toga.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/toga/issues
    Source = https://github.com/beeware/toga
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = BeeWare Team
maintainer_email = team@beeware.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
license = New BSD
license_files =
    = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    gui
    widget
    cross-platform
    desktop
    mobile
    web
    macOS
    cocoa
    iOS
    android
    windows
    winforms
    linux
    gtk

[options]
zip_safe = False
python_requires = >= 3.7
packages =

[flake8]
max-complexity = 25
max-line-length = 119

[isort]
profile = black
include_trailing_comma = false
split_on_trailing_comma = true
combine_as_imports = true
ensure_newline_before_comments = false
known_first_party =
    toga,toga_android,toga_cocoa,toga_dummy,toga_gtk,toga_iOS,toga_web,toga_winforms
