[build-system]
requires = [
    "setuptools==75.8.2",
    "setuptools_scm==8.2.0",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-android"
description = "An Android backend for the Toga widget toolkit."
readme = "README.rst"
requires-python = ">= 3.9"
license.text = "New BSD"
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "mobile",
    "android",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.readthedocs.io/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.readthedocs.io/en/stable/background/project/releases.html"

[project.entry-points."toga.backends"]
android = "toga_android"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "toga-core == {version}",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_android"]

[tool.coverage.paths]
source = [
    "src/toga_android",
    "**/toga_android",
]
