[build-system]
requires = [
    "setuptools==82.0.0",
    "setuptools_scm==9.2.2",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-android"
description = "An Android backend for the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE"
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "mobile",
    "android",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.entry-points."toga.backends"]
android = "toga_android"

[project.entry-points."toga_core.backend.toga_android"]
App = "toga_android.app:App"
# DocumentApp = "toga_dummy.app:DocumentApp"
Command = "toga_android.command:Command"
Font = "toga_android.fonts:Font"
Icon = "toga_android.icons:Icon"
Image = "toga_android.images:Image"
Paths = "toga_android.paths:Paths"
dialogs = "toga_android.dialogs"
resources = "toga_android.resources"

# Hardware
Camera = "toga_android.hardware.camera:Camera"
Location = "toga_android.hardware.location:Location"

# Status Icons
MenuStatusIcon = "toga_android.statusicons:MenuStatusIcon"
SimpleStatusIcon = "toga_android.statusicons:SimpleStatusIcon"
StatusIconSet = "toga_android.statusicons:StatusIconSet"

# Widgets
ActivityIndicator = "toga_android.widgets.activityindicator:ActivityIndicator"
Box = "toga_android.widgets.box:Box"
Button = "toga_android.widgets.button:Button"
Canvas = "toga_android.widgets.canvas:Canvas"
DateInput = "toga_android.widgets.dateinput:DateInput"
DetailedList = "toga_android.widgets.detailedlist:DetailedList"
Divider = "toga_android.widgets.divider:Divider"
ImageView = "toga_android.widgets.imageview:ImageView"
Label = "toga_android.widgets.label:Label"
MapView = "toga_android.widgets.mapview:MapView"
MultilineTextInput = "toga_android.widgets.multilinetextinput:MultilineTextInput"
NumberInput = "toga_android.widgets.numberinput:NumberInput"
OptionContainer = "toga_android.widgets.optioncontainer:OptionContainer"
PasswordInput = "toga_android.widgets.passwordinput:PasswordInput"
ProgressBar = "toga_android.widgets.progressbar:ProgressBar"
ScrollContainer = "toga_android.widgets.scrollcontainer:ScrollContainer"
Selection = "toga_android.widgets.selection:Selection"
Slider = "toga_android.widgets.slider:Slider"
# SplitContainer = "toga_android.widgets.splitcontainer:SplitContainer"
Switch = "toga_android.widgets.switch:Switch"
Table = "toga_android.widgets.table:Table"
TextInput = "toga_android.widgets.textinput:TextInput"
TimeInput = "toga_android.widgets.timeinput:TimeInput"
# Tree = "toga_android.widgets.tree:Tree"
WebView = "toga_android.widgets.webview:WebView"

# Windows
MainWindow = "toga_android.window:MainWindow"
Window = "toga_android.window:Window"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "toga-core == {version}",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_android"]

[tool.coverage.paths]
source = [
    "src/toga_android",
    "**/toga_android",
]
