[build-system]
requires = [
    "setuptools==82.0.0",
    "setuptools_scm==9.2.2",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-cocoa"
description = "A Cocoa (macOS) backend for the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE"
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "macOS",
    "cocoa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.entry-points."toga.backends"]
macOS = "toga_cocoa"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "fonttools >= 4.42.1, < 5.0.0",
    "rubicon-objc >= 0.5.1, < 0.6.0",
    "toga-core == {version}",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_cocoa"]

[tool.coverage.paths]
source = [
    "src/toga_cocoa",
    "**/toga_cocoa",
]
