[build-system]
requires = [
    "setuptools==82.0.1",
    "setuptools_scm==10.0.5",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-cocoa"
description = "A Cocoa (macOS) backend for the Toga widget toolkit."
readme = "README.md"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE",
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "macOS",
    "cocoa",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.beeware.org/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.beeware.org/en/stable/background/project/releases"

[project.entry-points."toga.backends"]
macOS = "toga_cocoa"

[project.entry-points."toga_core.backend.toga_cocoa"]
App = "toga_cocoa.app:App"
Command = "toga_cocoa.command:Command"
Font = "toga_cocoa.fonts:Font"
Icon = "toga_cocoa.icons:Icon"
Image = "toga_cocoa.images:Image"
Paths = "toga_cocoa.paths:Paths"
dialogs = "toga_cocoa.dialogs"
resources = "toga_cocoa.resources"

# Hardware
Camera = "toga_cocoa.hardware.camera:Camera"
Location = "toga_cocoa.hardware.location:Location"

# Status Icons
MenuStatusIcon = "toga_cocoa.statusicons:MenuStatusIcon"
SimpleStatusIcon = "toga_cocoa.statusicons:SimpleStatusIcon"
StatusIconSet = "toga_cocoa.statusicons:StatusIconSet"

# Widgets
ActivityIndicator = "toga_cocoa.widgets.activityindicator:ActivityIndicator"
Box = "toga_cocoa.widgets.box:Box"
Button = "toga_cocoa.widgets.button:Button"
Canvas = "toga_cocoa.widgets.canvas:Canvas"
DateInput = "toga_cocoa.widgets.dateinput:DateInput"
DetailedList = "toga_cocoa.widgets.detailedlist:DetailedList"
Divider = "toga_cocoa.widgets.divider:Divider"
ImageView = "toga_cocoa.widgets.imageview:ImageView"
Label = "toga_cocoa.widgets.label:Label"
MapView = "toga_cocoa.widgets.mapview:MapView"
MultilineTextInput = "toga_cocoa.widgets.multilinetextinput:MultilineTextInput"
NumberInput = "toga_cocoa.widgets.numberinput:NumberInput"
OptionContainer = "toga_cocoa.widgets.optioncontainer:OptionContainer"
PasswordInput = "toga_cocoa.widgets.passwordinput:PasswordInput"
ProgressBar = "toga_cocoa.widgets.progressbar:ProgressBar"
ScrollContainer = "toga_cocoa.widgets.scrollcontainer:ScrollContainer"
Selection = "toga_cocoa.widgets.selection:Selection"
Slider = "toga_cocoa.widgets.slider:Slider"
SplitContainer = "toga_cocoa.widgets.splitcontainer:SplitContainer"
Switch = "toga_cocoa.widgets.switch:Switch"
Table = "toga_cocoa.widgets.table:Table"
TextInput = "toga_cocoa.widgets.textinput:TextInput"
TimeInput = "toga_cocoa.widgets.timeinput:TimeInput"
Tree = "toga_cocoa.widgets.tree:Tree"
WebView = "toga_cocoa.widgets.webview:WebView"

# Windows
MainWindow = "toga_cocoa.window:MainWindow"
Window = "toga_cocoa.window:Window"

# Canvas implementation
Path2D = "toga_cocoa.widgets.canvas:Path2D"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "fonttools >= 4.42.1, < 5.0.0",
    "rubicon-objc >= 0.5.1, < 0.6.0",
    "toga-core == {version}",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga_cocoa"]

[tool.coverage.paths]
source = [
    "src/toga_cocoa",
    "**/toga_cocoa",
]
