[build-system]
requires = [
    "setuptools==80.9.0",
    "setuptools_scm==9.2.0",
    "setuptools_dynamic_dependencies==1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version", "dependencies"]
name = "toga-core"
description = "A Python native, OS native GUI toolkit."
readme = "README.rst"
requires-python = ">= 3.10"
license = "BSD-3-Clause"
license-files = [
    "LICENSE"
]
authors = [
    {name="Russell Keith-Magee", email="russell@keith-magee.com"},
]
maintainers = [
    {name="BeeWare Team", email="team@beeware.org"},
]
keywords = [
    "gui",
    "widget",
    "cross-platform",
    "toga",
    "desktop",
    "mobile",
    "web",
    "macOS",
    "cocoa",
    "iOS",
    "android",
    "windows",
    "winforms",
    "linux",
    "freeBSD",
    "gtk",
    "console",
    "web",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Widget Sets",
]

[dependency-groups]
# Extras used by developers *of* Toga are pinned to specific versions to
# ensure environment consistency.
pre-commit = [
    "pre-commit == 4.3.0",
    ]

town-crier = [
    "towncrier==24.8.0",
]

dev = [
    "coverage[toml] == 7.10.4",
    "coverage-conditional-plugin == 0.9.0",
    "Pillow == 11.3.0",
    "pytest == 8.4.1",
    "pytest-asyncio == 1.1.0",
    "pytest-freezer == 0.4.9",
    "pytest-xdist == 3.8.0",
    "setuptools-scm == 8.3.1",
    "tox-uv == 1.28.0",
    {include-group = "pre-commit"},
]
# Docs are always built on a specific Python version; see RTD and tox config files,
# and the docs contribution guide.
docs = [
    "beeware-docs-tools @ git+https://github.com/beeware/beeware-docs-tools",
    "Pillow == 11.3.0",  # Why is this part of the docs?
    "black==25.1.0",
    "markdown-checker==0.2.5",
    "mistletoe==1.4.0",
    "mkdocs-autorefs==1.4.2",
    "mkdocs-include-markdown-plugin==7.1.6",
    "mkdocs-literate-nav==0.6.2",
    "mkdocs-macros-plugin==1.3.9",
    "mkdocs-material==9.6.17",
    "mkdocs-table-reader-plugin==3.1.0",
    "mkdocs==1.6.1",
    "mkdocstrings-python==1.16.12",
    "pymdown-extensions==10.16.1",
    "pyspelling==2.10",
    "python-Levenshtein==0.27.1",
    "PyYAML==6.0.2",
    "setuptools-scm==9.2.0",
    "translate-toolkit @ git+https://github.com/translate/translate@aa35159f03f53aa536381643dfafbc2a19a24784",
]

[project.urls]
Homepage = "https://beeware.org/project/projects/libraries/toga/"
Funding = "https://beeware.org/contributing/membership/"
Documentation = "https://toga.readthedocs.io/"
Tracker = "https://github.com/beeware/toga/issues"
Source = "https://github.com/beeware/toga"
Changelog = "https://toga.readthedocs.io/en/stable/background/project/releases.html"

[project.entry-points."toga.image_formats"]
pil = "toga.plugins.image_formats.PILConverter"

[tool.setuptools_scm]
root = ".."

[tool.setuptools_dynamic_dependencies]
dependencies = [
    "travertino == {version}",
]

[tool.coverage.run]
parallel = true
branch = true
relative_files = true

# See notes in the root pyproject.toml file.
source = ["src"]
source_pkgs = ["toga"]

[tool.coverage.paths]
source = [
    "src/toga",
    "**/toga",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
]
