[metadata]
name = toga-core
description = A Python native, OS native GUI toolkit.
url = https://beeware.org/project/projects/libraries/toga/
project_urls =
    Funding = https://beeware.org/contributing/membership/
    Documentation = http://toga.readthedocs.io/en/latest/
    Tracker = https://github.com/beeware/toga/issues
    Source = https://github.com/beeware/toga
author = Russell Keith-Magee
author_email = russell@keith-magee.com
maintainer = BeeWare Team
maintainer_email = team@beeware.org
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: User Interfaces
    Topic :: Software Development :: Widget Sets
license = New BSD
license_files =
    = LICENSE
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    gui
    widget
    cross-platform
    desktop
    mobile
    web
    macOS
    cocoa
    iOS
    android
    windows
    winforms
    linux
    gtk
    django

[options]
install_requires =
    travertino>=0.1.3
    importlib_metadata>=4.4.0; python_version <= "3.9"
packages = find:
package_dir =
    = src
python_requires = >= 3.6
zip_safe = False

[options.extras_require]
# Extras used by developers *of* briefcase are pinned to specific versions to
# ensure environment consistency.
dev =
    coverage[toml] == 7.0.4
    pre-commit == 2.21.0
    pytest == 7.2.0
    pytest-tldr == 0.2.5
    tox == 4.0.1
docs =
    furo == 2022.12.7
    pyenchant == 3.2.2
    sphinx == 6.1.3
    sphinx_tabs == 3.4.1
    sphinx-autobuild == 2021.3.14
    sphinx-csv-filter == 0.4.0
    sphinxcontrib-spelling == 7.7.0

[options.package_data]
toga.resources =
    *.icns
    *.ico
    *.png

[options.packages.find]
where = src
