[build-system]
requires = ["setuptools==66.1.1", "setuptools_scm[toml]==7.0.5"]
build-backend = "setuptools.build_meta"

[tool.briefcase]
project_name = "Toga Demo"
bundle = "org.beeware"
version = "0.0.1"
url = "https://beeware.org"
license = "BSD license"
author = "Tiberius Yak"
author_email = "tiberius@beeware.org"

[tool.briefcase.app.toga-demo]
formal_name = "Toga Demo"
description = "A demonstration of the capabilities of the Toga widget toolkit."
sources = ["toga_demo"]
requires = ["../core"]

[tool.briefcase.app.toga-demo.macOS]
requires = [
    "../cocoa",
]

[tool.briefcase.app.toga-demo.linux]
requires = [
    "../gtk",
]

[tool.briefcase.app.toga-demo.windows]
requires = [
    "../winforms",
]

# Mobile deployments
[tool.briefcase.app.toga-demo.iOS]
requires = [
    "../iOS",
]

[tool.briefcase.app.toga-demo.android]
requires = [
    "../android",
]
